--- a/IndoorPositioningSystem/app/src/main/res/values/styles.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/styles.xml
@@ -1,12 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/red</item>
-        <item name="colorPrimaryDark">@color/blue</item>
-        <item name="colorAccent">@color/blue</item>
-        <item name="android:colorBackground">@color/background_material_light</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
     </style>
 
 </resources>
