--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_main.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true">
 
+                <TextView
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/user_logged_in"
+                    android:textSize="20sp" />
+
                 <Button
                     android:text="Add venue"
                     android:layout_width="match_parent"
@@ -33,129 +40,18 @@
                     android:id="@+id/add_venue_button"
                     android:onClick="onClick" />
 
+                <Button
+                    android:text="Show venue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/show_venue_button"
+                    android:onClick="onClick" />
+
                 <ScrollView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/scrollView"
                     android:fillViewport="true">
-
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:background="#ffffff"
-                            android:layout_height="400dp"
-                            android:id="@+id/room">
-
-                            <ImageView
-                                android:id="@+id/imgView"
-                                android:layout_width="fill_parent"
-                                android:layout_height="fill_parent"
-                                android:background="@android:color/white"
-                                android:scaleType="fitXY"></ImageView>
-
-                            <com.nellymincheva.indoorpositioningsystem.GridView
-                                android:id="@+id/grid_view"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent" />
-
-                            <ImageView
-                                app:srcCompat="@mipmap/beacon1"
-                                android:id="@+id/beacon1"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:background="#B5DEE3" />
-
-                            <ImageView
-                                app:srcCompat="@mipmap/beacon2"
-                                android:id="@+id/beacon2"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:background="#B5DEE3" />
-
-                            <ImageView
-                                app:srcCompat="@mipmap/beacon3"
-                                android:id="@+id/beacon3"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:background="#B5DEE3" />
-
-                            <ImageView
-                                app:srcCompat="@mipmap/beacon4"
-                                android:id="@+id/beacon4"
-                                android:layout_width="35dp"
-                                android:layout_height="35dp"
-                                android:background="#B5DEE3" />
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:srcCompat="@mipmap/ic_launcher"
-                                android:id="@+id/user_icon"
-                                android:layout_below="@+id/beacon3"
-                                android:layout_centerHorizontal="true"
-                                android:layout_marginTop="86dp" />
-
-
-                        </RelativeLayout>
-
-
-                        <CheckBox
-                            android:text="Show Grid"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/showGrid"
-                            android:checked="true" />
-
-
-                        <TextView
-                            android:text=""
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/user_logged_in"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:text="Bluetooth OFF or not all beacons in range"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/userPositionInfo"
-                            android:textSize="20sp" />
-
-
-                        <TextView
-                            android:text=""
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/beacon1Info"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:text=""
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/beacon2Info"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:text=""
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/beacon3Info"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:text=""
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/beacon4Info"
-                            android:textSize="20sp" />
-
-
-                    </LinearLayout>
 
                 </ScrollView>
             </LinearLayout>
