--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:background="#ffffff"
@@ -32,9 +33,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_face_"
+                app:srcCompat="@mipmap/ic_face"
                 android:id="@+id/user_icon"
-                android:layout_below="@+id/beacon3"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="86dp" />
 
