--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
@@ -22,6 +22,7 @@
             android:id="@+id/room"
             android:padding="20dp">
 
+
             <ImageView
                 android:id="@+id/imgView"
                 android:layout_width="fill_parent"
@@ -29,6 +30,10 @@
                 android:background="@color/roomBg"
                 android:scaleType="fitXY"></ImageView>
 
+            <com.nellymincheva.indoorpositioningsystem.GridView
+                android:id="@+id/grid_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
             <ImageView
                 android:layout_width="wrap_content"
