Adding venue working

--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_add_venue.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_add_venue.xml
@@ -133,37 +133,45 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="vertical"
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="1"
+                android:id="@+id/calibrate"
+                android:visibility="invisible"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
+
+
+
+                <Button
+                    android:text="Calibrate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/calibrateButton" />
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:weightSum="1"
-                    android:id="@+id/calibrate"
-                    android:visibility="invisible"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true">
+                    android:background="#ffffff"
+                    android:id="@+id/room2"
+                    android:layout_height="400dp">
 
+                    <ImageView
+                        android:id="@+id/imgView2"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:background="@android:color/white"
+                        android:scaleType="fitXY"></ImageView>
 
-                    <Button
-                        android:text="Start calibration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/startButton" />
-
-                    <RelativeLayout
+                    <com.nellymincheva.indoorpositioningsystem.GridView
+                        android:id="@+id/grid_view2"
                         android:layout_width="match_parent"
-                        android:background="#ffffff"
-                        android:id="@+id/room2"
-                        android:layout_height="400dp">
+                        android:layout_height="match_parent" />
 
 
-                        <com.nellymincheva.indoorpositioningsystem.GridView
-                            android:id="@+id/grid_view2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
-
-
-                    </RelativeLayout>
+                </RelativeLayout>
 
                     <Button
                         android:text="Done"
