--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/imgView"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/roomBg"
+                android:background="@color/bekonLight"
                 android:scaleType="fitXY"></ImageView>
 
             <com.nellymincheva.indoorpositioningsystem.GridView
