--- a/IndoorPositioningSystem/app/src/main/res/layout/venues_list.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/venues_list.xml
@@ -8,11 +8,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/roomBg"
+        android:background="@color/bekonLight"
         android:id="@+id/venue_name"
         android:layout_weight="70"
         android:text="@string/app_name"
         android:padding="12sp"
         android:textAlignment="textStart"
-        android:textSize="16sp"/>
+        android:textSize="16sp">
+    </TextView>
 </LinearLayout>
