--- a/IndoorPositioningSystem/app/src/main/res/values/colors.xml
+++ b/IndoorPositioningSystem/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="roomBg">#f0caca</color>
+    <color name="bekonLight">#f0caca</color>
+    <color name="bekonDark">#C22B2B</color>
 
 
     <color name="black_overlay">#66000000</color>
