--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_add_venue.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_add_venue.xml
@@ -177,7 +177,7 @@
                         android:text="Done"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/done" />
+                        android:id="@+id/calibrationDoneButton" />
 
                 </LinearLayout>
 
