--- a/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
+++ b/IndoorPositioningSystem/app/src/main/res/layout/activity_venue.xml
@@ -38,8 +38,15 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_face"
-                android:id="@+id/user_icon"
+                app:srcCompat="@mipmap/ic_face_eucledean_distance"
+                android:id="@+id/user_icon_euclidean_distance"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="86dp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_face_nearest_sieve"
+                android:id="@+id/user_icon_nearest_sieve"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="86dp" />
 
@@ -49,4 +56,9 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/data"
+        android:text="zdr"/>
 </FrameLayout>
